--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,21 @@
+<div>
+    <label for="name">Hero name: </label>
+    <input id="id" [(ngModel)]="hero.id" placeholder="ID">
+    <input id="name" [(ngModel)]="hero.name" placeholder="NAME">
+    <button (click)="addHero(hero)">Add New Hero</button>
+  </div>
+
 <h2>{{ hero.name | uppercase }} <br/> Details:</h2>
 <div><span>ID:</span>{{ hero.id }}</div>
 <div><span>Name:</span>{{ hero.name }}</div>
+
+
+
+
+<h2 *ngIf="selectedHero">SELECTED HERO IS: {{ selectedHero.name }}</h2>
+<input type="text" placeholder="Search hero here..." [(ngModel)]="searchHero">
+<ul class="heroes">
+  <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
